--- a/wallabag/Storyboard/Registration.storyboard
+++ b/wallabag/Storyboard/Registration.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,11 +23,11 @@
                         <viewControllerLayoutGuide type="bottom" id="uNp-2q-j9F"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jgR-CC-0zk">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallabag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRs-RA-L1c">
-                                <rect key="frame" x="24" y="300.5" width="327" height="50"/>
+                                <rect key="frame" x="28" y="415" width="358" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="chy-bF-kzT"/>
                                 </constraints>
@@ -32,7 +36,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn4-yG-cxW" userLabel="Add Server">
-                                <rect key="frame" x="155.5" y="366.5" width="64" height="29"/>
+                                <rect key="frame" x="175" y="481" width="64" height="29"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Home.Register.Button"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="uHV-vJ-PUc"/>
@@ -46,7 +50,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="pm0-Wo-Yls">
-                                <rect key="frame" x="67.5" y="68.5" width="240" height="200"/>
+                                <rect key="frame" x="87" y="183" width="240" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="XfJ-dY-Aby"/>
                                     <constraint firstAttribute="height" constant="200" id="dbC-X0-qob"/>
@@ -72,24 +76,24 @@
         <!--Server-->
         <scene sceneID="tbh-yG-xcX">
             <objects>
-                <viewController storyboardIdentifier="server" id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ServerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="znn-gf-Efm"/>
                         <viewControllerLayoutGuide type="bottom" id="21n-Ne-pUp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="a4U-4S-atg">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eWS-vU-XLm">
-                                <rect key="frame" x="16" y="122" width="343" height="30"/>
+                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Server.Server.TextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallabag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDI-0H-Usb">
-                                <rect key="frame" x="16" y="72" width="343" height="42"/>
+                                <rect key="frame" x="20" y="96" width="374" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="GWL-6I-ADv"/>
                                 </constraints>
@@ -98,7 +102,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="teE-c3-any">
-                                <rect key="frame" x="169" y="160" width="37" height="29"/>
+                                <rect key="frame" x="188.5" y="184" width="37" height="29"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Server.Next.Button"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <state key="normal" title="Next"/>
@@ -121,6 +125,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Server" id="03w-5D-czm"/>
                     <connections>
+                        <outlet property="nextButton" destination="teE-c3-any" id="mno-gY-Lbv"/>
                         <outlet property="server" destination="eWS-vU-XLm" id="HEz-Ei-vTf"/>
                         <segue destination="hyy-VQ-rcz" kind="show" identifier="toClientId" id="l6t-91-dKJ"/>
                     </connections>
@@ -135,7 +140,7 @@
                 <navigationController storyboardIdentifier="serverNavigation" automaticallyAdjustsScrollViewInsets="NO" id="LDR-tz-9ed" userLabel="Add server navigation" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="x91-Lh-MNV">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -156,11 +161,11 @@
                         <viewControllerLayoutGuide type="bottom" id="BXs-WV-4No"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lmm-lG-qux">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallabag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZI-U1-cVg">
-                                <rect key="frame" x="16" y="72" width="343" height="42"/>
+                                <rect key="frame" x="20" y="96" width="374" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="eps-ZG-n1a"/>
                                 </constraints>
@@ -169,21 +174,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientId" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsM-5G-HXR">
-                                <rect key="frame" x="16" y="122" width="343" height="30"/>
+                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientId.TextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientSecret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-4L-sqH">
-                                <rect key="frame" x="16" y="160" width="343" height="30"/>
+                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientSecret.TextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDJ-gL-tA5">
-                                <rect key="frame" x="169" y="198" width="37" height="29"/>
+                                <rect key="frame" x="188.5" y="222" width="37" height="29"/>
                                 <accessibility key="accessibilityConfiguration" identifier="ClientId.Next.Button"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <state key="normal" title="Next"/>
@@ -192,7 +197,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bkh-cz-HgQ">
-                                <rect key="frame" x="16" y="235" width="343" height="97.5"/>
+                                <rect key="frame" x="20" y="259" width="374" height="97.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Well, now the client_id and client_secret.
 This token are secret and can be found in your developer page, And create a new client or use an already existing token</string>
@@ -200,7 +205,7 @@ This token are secret and can be found in your developer page, And create a new 
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AM9-CO-l8h">
-                                <rect key="frame" x="91" y="340.5" width="193" height="29"/>
+                                <rect key="frame" x="110.5" y="364.5" width="193" height="29"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <state key="normal" title="Open my developer page"/>
                                 <connections>
@@ -248,25 +253,25 @@ This token are secret and can be found in your developer page, And create a new 
                         <viewControllerLayoutGuide type="bottom" id="Lvb-T3-PgC"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jMl-7N-NES">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C1D-rB-gOJ">
-                                <rect key="frame" x="16" y="122" width="343" height="30"/>
+                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Login.Username.TextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UQC-pk-uO1">
-                                <rect key="frame" x="16" y="160" width="343" height="30"/>
+                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Login.Password.TextField"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallabag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IJ-gJ-VQh">
-                                <rect key="frame" x="16" y="72" width="343" height="42"/>
+                                <rect key="frame" x="20" y="96" width="374" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="Ka4-YF-4pV"/>
                                 </constraints>
@@ -275,7 +280,7 @@ This token are secret and can be found in your developer page, And create a new 
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2e6-On-1Cd">
-                                <rect key="frame" x="169" y="198" width="37" height="29"/>
+                                <rect key="frame" x="188.5" y="222" width="37" height="29"/>
                                 <accessibility key="accessibilityConfiguration" identifier="Login.Next.Button"/>
                                 <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                 <state key="normal" title="Next"/>
